@@ -1,6 +1,10 @@
 2015-07-20  Titus Brown  <titus@idyll.org>
 
-   * scripts/normalize-by-median.py: corrected epilog.
+   * khmer/__init__.py: cleaned up FP rate reporting.
+   * scripts/normalize-by-median.py: corrected epilog; refactored reporting
+   to be a bit cleaner; use CSV for reporting file;
+   added --report-frequency arg.
+   * tests/test_normalize_by_median.py: updated/added tests for reporting.
 
 2015-07-17  Jacob Fenton  <bocajnotnef@gmail.com>
 
